# rust-api

./: .gitignore  Cargo.toml  rust_api_development_guide.mdc
.cursor/rules/: auth_domain.mdc  config_system.mdc  database_system.mdc  locale_system.mdc  main.mdc  versioning_system.mdc
configs/: .env.default  .env.development  .env.staging  config.default.json  config.staging.json
locales/: en.json  vi.json
src/: main.rs  shared.rs  system.rs
src/domains/: user.rs
src/domains/user/: dto.rs  handlers.rs  services.rs  state.rs
src/domains/user/handlers/: auth_handlers.rs  auth_middleware.rs
src/domains/user/services/: jwt_service.rs  password_service.rs
src/middleware/: mod.rs
src/shared/: constants.rs  models.rs  state.rs  types.rs  utils.rs
src/shared/models/: mod.rs  user.rs  user_session.rs
src/shared/utils/: date_util.rs
src/system/: config.rs  database.rs  docs.rs  locale.rs  versioning.rs
src/system/config/: mod.rs
src/system/database/: database_manager.rs
src/system/locale/: extractor.rs  loader.rs  locale_system.rs
src/system/versioning/: extractor.rs  middleware.rs  versioning_system.rs
