[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
tokio = { version = "1.46.1", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.132"
mongodb = "3.1.0"
bson = { version = "2.13.0", features = ["chrono-0_4"] }
uuid = { version = "1.11.0", features = ["v4", "serde"] }
chrono = { version = "0.4.38", features = ["serde"] }
futures = "0.3.31"
anyhow = "1.0.94"
thiserror = "2.0.8"
tower = "0.5.2"
async-trait = "0.1.84"
jsonwebtoken = "9.0"
bcrypt = "0.15"
serde_with = "3.0"
regex = "1.10"
rand = "0.8"
headers = "0.4"
tower-http = { version = "0.5", features = ["cors"] }

[dev-dependencies]
tempfile = "3.0"
